<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <include layout="@layout/widget_horizontal_divider" />

    <LinearLayout
        android:id="@+id/keypad_row1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:gravity="center"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/numkey_1"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:background="@drawable/selector_numkey">
            <TextView
                android:id="@+id/digit_1"
                android:layout_width="13dp"
                android:layout_height="33dp"
                android:layout_centerInParent="true"
                android:text="@string/key_1"
                style="@style/KeyboardDigitStyle"
                android:gravity="center_horizontal|center_vertical"
                />
        </RelativeLayout>

        <include layout="@layout/widget_vertical_divider" />

        <RelativeLayout
            android:id="@+id/numkey_2"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:background="@drawable/selector_numkey">
            <TextView
                android:id="@+id/digit_2"
                android:layout_width="13dp"
                android:layout_height="33dp"
                android:layout_centerInParent="true"
                android:text="@string/key_2"
                style="@style/KeyboardDigitStyle"
                android:gravity="center_horizontal|center_vertical"
                />
        </RelativeLayout>
        <include layout="@layout/widget_vertical_divider" />

        <RelativeLayout
            android:id="@+id/numkey_3"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:background="@drawable/selector_numkey">
            <TextView
                android:id="@+id/digit_3"
                android:layout_width="13dp"
                android:layout_height="33dp"
                android:layout_centerInParent="true"
                android:text="@string/key_3"
                style="@style/KeyboardDigitStyle"
                android:gravity="center_horizontal|center_vertical"
                />
        </RelativeLayout>
    </LinearLayout>

    <include layout="@layout/widget_horizontal_divider" />

    <LinearLayout
        android:id="@+id/keypad_row2"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:gravity="center"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/numkey_4"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:background="@drawable/selector_numkey">
            <TextView
                android:id="@+id/digit_4"
                android:layout_width="13dp"
                android:layout_height="33dp"
                android:layout_centerInParent="true"
                android:text="@string/key_4"
                style="@style/KeyboardDigitStyle"
                android:gravity="center_horizontal|center_vertical"
                />
        </RelativeLayout>
        <include layout="@layout/widget_vertical_divider" />

        <RelativeLayout
            android:id="@+id/numkey_5"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:background="@drawable/selector_numkey">
            <TextView
                android:id="@+id/digit_5"
                android:layout_width="13dp"
                android:layout_height="33dp"
                android:layout_centerInParent="true"
                android:text="@string/key_5"
                style="@style/KeyboardDigitStyle"
                android:gravity="center_horizontal|center_vertical"
                />
        </RelativeLayout>
        <include layout="@layout/widget_vertical_divider" />

        <RelativeLayout
            android:id="@+id/numkey_6"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:background="@drawable/selector_numkey">
            <TextView
                android:id="@+id/digit_6"
                android:layout_width="13dp"
                android:layout_height="33dp"
                android:layout_centerInParent="true"
                android:text="@string/key_6"
                style="@style/KeyboardDigitStyle"
                android:gravity="center_horizontal|center_vertical"
                />
        </RelativeLayout>
    </LinearLayout>

    <include layout="@layout/widget_horizontal_divider" />

    <LinearLayout
        android:id="@+id/keypad_row3"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:gravity="center"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/numkey_7"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:background="@drawable/selector_numkey">
            <TextView
                android:id="@+id/digit_7"
                android:layout_width="13dp"
                android:layout_height="33dp"
                android:layout_centerInParent="true"
                android:text="@string/key_7"
                style="@style/KeyboardDigitStyle"
                android:gravity="center_horizontal|center_vertical"
                />
        </RelativeLayout>
        <include layout="@layout/widget_vertical_divider" />

        <RelativeLayout
            android:id="@+id/numkey_8"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:background="@drawable/selector_numkey">
            <TextView
                android:id="@+id/digit_8"
                android:layout_width="13dp"
                android:layout_height="33dp"
                android:layout_centerInParent="true"
                android:text="@string/key_8"
                style="@style/KeyboardDigitStyle"
                android:gravity="center_horizontal|center_vertical"
                />
        </RelativeLayout>
        <include layout="@layout/widget_vertical_divider" />

        <RelativeLayout
            android:id="@+id/numkey_9"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:background="@drawable/selector_numkey">
            <TextView
                android:id="@+id/digit_9"
                android:layout_width="13dp"
                android:layout_height="33dp"
                android:layout_centerInParent="true"
                android:text="@string/key_9"
                style="@style/KeyboardDigitStyle"
                android:gravity="center_horizontal|center_vertical"
                />
        </RelativeLayout>
    </LinearLayout>

    <include layout="@layout/widget_horizontal_divider" />

    <LinearLayout
        android:id="@+id/keypad_row4"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:gravity="center"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/numkey_clear"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:background="@drawable/selector_numkey">
            <TextView
                android:id="@+id/tv_clear"
                android:layout_width="13dp"
                android:layout_height="33dp"
                android:layout_centerInParent="true"
                android:text="@string/key_clear"
                style="@style/KeyboardDigitStyle"
                android:gravity="center_horizontal|center_vertical"
                />
        </RelativeLayout>

        <include layout="@layout/widget_vertical_divider" />

        <RelativeLayout
            android:id="@+id/numkey_0"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:background="@drawable/selector_numkey">
            <TextView
                android:id="@+id/digit_0"
                android:layout_width="13dp"
                android:layout_height="33dp"
                android:layout_centerInParent="true"
                android:text="@string/key_0"
                style="@style/KeyboardDigitStyle"
                android:gravity="center_horizontal|center_vertical"
                />
        </RelativeLayout>

        <include layout="@layout/widget_vertical_divider" />

        <RelativeLayout
            android:id="@+id/numkey_backspace"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:background="@drawable/selector_numkey">
            <View
                android:id="@+id/tv_backspace"
                android:layout_width="24dp"
                android:layout_height="15dp"
                android:layout_centerInParent="true"
                android:background="@drawable/backspace"/>
        </RelativeLayout>
    </LinearLayout>

    <include layout="@layout/widget_horizontal_divider" />

</LinearLayout>