<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <FrameLayout
        android:id="@+id/keyboard_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/selector_keyboard"
        app:layout_constraintBottom_toTopOf="@id/keyboard_4"
        app:layout_constraintEnd_toStartOf="@id/keyboard_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1">

        <TextView
            android:id="@+id/digit_1"
            style="@style/KeyboardDigitStyle"
            android:layout_width="13dp"
            android:layout_height="33dp"
            android:lineSpacingExtra="9sp"
            android:text="@string/key_1"
            android:textSize="20sp" />
    </FrameLayout>


    <FrameLayout
        android:id="@+id/keyboard_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_keyboard"
        app:layout_constraintBottom_toTopOf="@id/keyboard_5"
        app:layout_constraintEnd_toStartOf="@id/keyboard_3"
        app:layout_constraintStart_toEndOf="@id/keyboard_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1">

        <TextView
            android:id="@+id/digit_2"
            style="@style/KeyboardDigitStyle"
            android:layout_width="13dp"
            android:layout_height="33dp"
            android:lineSpacingExtra="9sp"
            android:text="@string/key_2"
            android:textSize="20sp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/keyboard_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/selector_keyboard"
        app:layout_constraintBottom_toTopOf="@id/keyboard_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/keyboard_2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1">

        <TextView
            android:id="@+id/digit_3"
            style="@style/KeyboardDigitStyle"
            android:layout_width="13dp"
            android:layout_height="33dp"
            android:lineSpacingExtra="9sp"
            android:text="@string/key_3"
            android:textSize="20sp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/keyboard_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/selector_keyboard"
        app:layout_constraintBottom_toTopOf="@id/keyboard_7"
        app:layout_constraintEnd_toStartOf="@id/keyboard_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/keyboard_1"
        app:layout_constraintVertical_weight="1">

        <TextView
            android:id="@+id/digit_4"
            style="@style/KeyboardDigitStyle"
            android:layout_width="13dp"
            android:layout_height="33dp"
            android:lineSpacingExtra="9sp"
            android:text="@string/key_4"
            android:textSize="20sp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/keyboard_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_keyboard"
        app:layout_constraintBottom_toTopOf="@id/keyboard_8"
        app:layout_constraintEnd_toStartOf="@id/keyboard_6"
        app:layout_constraintStart_toEndOf="@id/keyboard_4"
        app:layout_constraintTop_toBottomOf="@id/keyboard_2"
        app:layout_constraintVertical_weight="1">

        <TextView
            android:id="@+id/digit_5"
            style="@style/KeyboardDigitStyle"
            android:layout_width="13dp"
            android:layout_height="33dp"
            android:lineSpacingExtra="9sp"
            android:text="@string/key_5"
            android:textSize="20sp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/keyboard_6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/selector_keyboard"
        app:layout_constraintBottom_toTopOf="@id/keyboard_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/keyboard_5"
        app:layout_constraintTop_toBottomOf="@id/keyboard_3"
        app:layout_constraintVertical_weight="1">

        <TextView
            android:id="@+id/digit_6"
            style="@style/KeyboardDigitStyle"
            android:layout_width="13dp"
            android:layout_height="33dp"
            android:lineSpacingExtra="9sp"
            android:text="@string/key_6"
            android:textSize="20sp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/keyboard_7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/selector_keyboard"
        app:layout_constraintBottom_toTopOf="@id/keyboard_clear"
        app:layout_constraintEnd_toStartOf="@id/keyboard_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/keyboard_4"
        app:layout_constraintVertical_weight="1">

        <TextView
            android:id="@+id/digit_7"
            style="@style/KeyboardDigitStyle"
            android:layout_width="13dp"
            android:layout_height="33dp"
            android:lineSpacingExtra="9sp"
            android:text="@string/key_7"
            android:textSize="20sp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/keyboard_8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_keyboard"
        app:layout_constraintBottom_toTopOf="@id/keyboard_0"
        app:layout_constraintEnd_toStartOf="@id/keyboard_9"
        app:layout_constraintStart_toEndOf="@id/keyboard_7"
        app:layout_constraintTop_toBottomOf="@id/keyboard_5"
        app:layout_constraintVertical_weight="1">

        <TextView
            android:id="@+id/digit_8"
            style="@style/KeyboardDigitStyle"
            android:layout_width="13dp"
            android:layout_height="33dp"
            android:lineSpacingExtra="9sp"
            android:text="@string/key_8"
            android:textSize="20sp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/keyboard_9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/selector_keyboard"
        app:layout_constraintBottom_toTopOf="@id/keyboard_backspace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/keyboard_8"
        app:layout_constraintTop_toBottomOf="@id/keyboard_6"
        app:layout_constraintVertical_weight="1">

        <TextView
            android:id="@+id/digit_9"
            style="@style/KeyboardDigitStyle"
            android:layout_width="13dp"
            android:layout_height="33dp"
            android:lineSpacingExtra="9sp"
            android:text="@string/key_9"
            android:textSize="20sp"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/keyboard_clear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/selector_keyboard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/keyboard_0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/keyboard_7"
        app:layout_constraintVertical_weight="1">

        <TextView
            android:id="@+id/tv_clear"
            style="@style/KeyboardDigitStyle"
            android:layout_width="13dp"
            android:layout_height="33dp"
            android:lineSpacingExtra="9sp"
            android:text="@string/key_clear"
            android:textSize="20sp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/keyboard_0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_keyboard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/keyboard_backspace"
        app:layout_constraintStart_toEndOf="@id/keyboard_clear"
        app:layout_constraintTop_toBottomOf="@id/keyboard_8"
        app:layout_constraintVertical_weight="1">

        <TextView
            android:id="@+id/digit_0"
            style="@style/KeyboardDigitStyle"
            android:layout_width="13dp"
            android:layout_height="33dp"
            android:lineSpacingExtra="9sp"
            android:text="@string/key_0"
            android:textSize="20sp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/keyboard_backspace"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/selector_keyboard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/keyboard_0"
        app:layout_constraintTop_toBottomOf="@id/keyboard_9"
        app:layout_constraintVertical_weight="1">

        <View
            android:id="@+id/tv_backspace"
            android:layout_width="24dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:background="@drawable/backspace" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>