<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/amount_title"
        android:layout_width="312dp"
        android:layout_height="30dp"
        android:layout_marginTop="104dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="3sp"
        android:text="@string/enter_amount"
        android:textColor="@color/text_enter_amount"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/amount"
        style="@style/AmountStyle"
        android:layout_width="312dp"
        android:layout_height="48dp"
        android:layout_marginTop="146dp"
        android:lineSpacingExtra="0sp"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/default_amount" />


    <include
        android:id="@+id/keypad"
        layout="@layout/widget_keyboard"
        android:layout_width="320dp"
        android:layout_height="308dp"
        android:layout_marginTop="230dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/submit"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/selector_btn"
        android:gravity="center"
        android:lineSpacingExtra="4sp"
        android:text="@string/request_payment"
        android:textColor="@color/selector_btn_text"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>